--- a/public/styles.css
+++ b/public/styles.css
@@ -21,7 +21,7 @@ nav ul {
     flex-wrap: wrap;
 }
 
-/* Barra de navegación colapsada */
+
 .navbar-collapse {
     display: flex;
     justify-content: space-between;
@@ -34,12 +34,12 @@ nav ul {
     padding-right: 40px;
 }
 
-.nav-item a{
+.nav-item a {
     color: white !important;
 }
 
-/* Sección "Nuestros Servicios" */
-.nuestros-servicios {
+
+.form-clientes {
     margin: 40px 0;
     text-align: center;
     font-size: 1.2em;
@@ -47,18 +47,19 @@ nav ul {
     flex-direction: column;
 }
 
-.nuestros-servicios h1 {
+.form-clientes h1, .table-clients h1 {
     font-size: 1.2em;
     font-weight: bold;
+    text-align: center;
 }
 
-.nuestros-servicios p {
+.form-clientes p {
     max-width: 800px;
     margin: 25px auto 0 auto;
     font-size: 0.9em;
 }
 
-/* Pie de página */
+
 .footer {
     display: flex;
     justify-content: left;
@@ -78,63 +79,56 @@ nav ul {
     height: 100px;
 }
 
-
-
-/* Media queries */
-@media screen and (max-width: 425px) {
-    /* Cuando la pantalla es máximo 425 pixeles */
-    .seccion1 {
-        height: 300px;
-        display: flex;
-        justify-content: center;
-        flex-wrap: nowrap;
-        flex-direction: column;
-        padding: 30px;
-        margin-bottom: 15px;
-    }
-    .seccion1 p {
-        margin-bottom: 20px;
-    }
+#clientForm {
+    max-width: 400px; /* Ajusta el ancho máximo según tus necesidades */
+    margin: auto; /* Centra el formulario horizontalmente */
 }
 
-@media screen and (max-width: 767px) {
-    /* Cuando la pantalla es máximo 767 pixeles */
-    .seccion2 {
-        display: flex;
-        justify-content: space-around;
-        flex-wrap: wrap;
-        flex-direction: column;
-    }
-    .seccion2 article {
-        background-color: #2273C2;
-    }
+label {
+    display: inline-block;
+    width: 80px; /* Ajusta el ancho del label según tus necesidades */
+    text-align: right;
+    margin-right: 10px; /* Espaciado entre el label y el campo de entrada */
+    font-size: medium;
 }
 
-    #clientForm {
-        max-width: 400px; /* Ajusta el ancho máximo según tus necesidades */
-        margin: auto; /* Centra el formulario horizontalmente */
-    }
+input {
+    width: 250px; /* Ajusta el ancho del campo de entrada según tus necesidades */
+    padding: 5px;
+    box-sizing: border-box; /* Incluye el relleno y el borde en el ancho total */
+}
 
-    label {
-        display: inline-block;
-        width: 80px; /* Ajusta el ancho del label según tus necesidades */
-        text-align: right;
-        margin-right: 10px; /* Espaciado entre el label y el campo de entrada */
-        font-size:medium ;
-    }
+input[type="submit"] {
+    width: auto; /* Ajusta el ancho del botón de envío según el contenido */
+}
 
-    input {
-        width: 250px; /* Ajusta el ancho del campo de entrada según tus necesidades */
-        padding: 5px;
-        box-sizing: border-box; /* Incluye el relleno y el borde en el ancho total */
-    }
+.table-clients {
+    margin-left: auto;
+    margin-top: auto;
+}
 
-    input[type="submit"] {
-        width: auto; /* Ajusta el ancho del botón de envío según el contenido */
-    }
+#lastTenClients {
+    max-width: 800px; /* Ajusta el ancho máximo según tus necesidades */
+    margin: auto; /* Centra horizontalmente */
+    border: 1px solid #007872;
 
-    #lastTenClients{
-        margin-left: auto;
-        margin-top: auto;
-    }
+}
+
+#lastTenClients th{
+    width: 150px;
+    
+}
+
+#lastTenClients th,
+#lastTenClients td {
+    border: 1px solid #007872; /* Agrega un borde de 1px a todas las celdas */
+    padding: 8px; /* Ajusta el espaciado interno según tus preferencias */
+    text-align: left; /* Ajusta la alineación del texto según tus preferencias */
+}
+
+#lastTenClients thead tr:first-child {
+    background-color: #007872; /* Fondo de la primera fila */
+    color: white; /* Color del texto de la primera fila */
+}
+
 
